--- a/deploy.yml
+++ b/deploy.yml
@@ -30,5 +30,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "Monprojetmlops"   # remplace par le nom de ton app Heroku
-          heroku_email: "benoitgoffinet@live.fr"  # ton email Heroku
+          heroku_app_name: "Monprojetmlops"   
+          heroku_email: "benoitgoffinet@live.fr"  
