--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,29 @@
-name: CI/CD Deploy to Heroku
+name: Build et Test avec démarrage API
 
 on:
   push:
     branches:
-      - main  # branche principale, adapte si besoin
+      - main
 
 jobs:
-  build-and-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.9'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
-      - name: Start API
-        run: |
-          uvicorn api.api:app --host 0.0.0.0 --port 8000 &
-          sleep 5
-      - name: Run unit tests
-        run: python -m unittest discover tests
+      - name: Installer les dépendances
+        run: pip install -r requirements.txt
 
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "monprojetmlops"   
-          heroku_email: "benoitgoffinet@live.fr"  
+      - name: Démarrer l'API en arrière-plan
+        run: |
+          uvicorn app:app --host 0.0.0.0 --port 8000 &
+          sleep 5  # attends que le serveur démarre
+
+      - name: Lancer les tests
+        run: pytest tests/test_api.py
