--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build et Test avec démarrage API
+name: Build, Test et Deploy API Docker
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build-test-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,3 +28,20 @@ jobs:
 
       - name: Lancer les tests (avec logs)
         run: pytest -s tests/test_api.py
+
+      - name: Se connecter à Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build et push l'image Docker
+        run: |
+          docker build -t ben8787/monprojetmlops:latest .
+          docker push ben8787/monprojetmlops:latest
+
+      - name: Déployer sur Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: monprojetmlops
+          images: 'ben8787/monprojetmlops:latest'
