--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,9 @@ jobs:
           docker build -t ben8787/monprojetmlops:latest .
           docker push ben8787/monprojetmlops:latest
 
-      - name: Déployer sur Azure Web App
+       - name: Déployer sur Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: monprojetmlops
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'ben8787/monprojetmlops:latest'
